kubernetes/apps/rackpeek/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: rackpeek
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rackpeek
  namespace: rackpeek
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: RackPeek
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: rackpeek.png
    gethomepage.dev/href: https://rackpeek.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=rackpeek
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`rackpeek.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: rackpeek
          port: 8080
  tls: {}
